feat(expo): add fights page with accordion UI
- Add fights.tsx page component
- Add accordion UI component
- Update translations (en/fr)

--- a/packages/translations/src/locales/en.json
+++ b/packages/translations/src/locales/en.json
@@ -67,6 +67,11 @@
         "placeholder": "What was resolved? How to avoid this?"
       }
     }
+  },
+  "fightList": {
+    "title": "Fight History",
+    "empty": "No fights logged yet.",
+    "noName": "Untitled",
+    "noValue": "-"
   }
 }
-
