--- a/packages/translations/src/locales/fr.json
+++ b/packages/translations/src/locales/fr.json
@@ -67,6 +67,12 @@
         "placeholder": "Qu'est-ce qui a été résolu ? Comment éviter ça ?"
       }
     }
+  },
+  "fightList": {
+    "title": "Historique des disputes",
+    "empty": "Aucune dispute enregistrée.",
+    "noName": "Sans titre",
+    "noValue": "-"
   }
 }
 
